<resources>
    <string name="app_name">Satapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Equipos</string>
    <string name="menu_gallery">Tickets</string>
    <string name="menu_slideshow">Usuarios</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">QR Escaner</string>
    <string name="menu_send">Send</string>
    <string name="hint_title_new_ticket">Titulo</string>
    <string name="hint_description_new_ticket">Descripción</string>
    <string name="btn_foto_one_new_ticket">Subir foto</string>
    <string name="content_description_upload_image">Imagen cargada tras la subida por parte del usuario</string>
    <string name="new_ticket_dialog_title">Nuevo ticket</string>
    <string name="new_ticket_dialog_message">Añada la información del nuevo ticket</string>
    <string name="new_ticket_dialog_error_need_title">Hace flata indicar un titulo</string>
    <string name="new_ticket_dialog_error_need_description">Hace flata indicar una descripción</string>
    <string name="create">Crear</string>
    <string name="cancel">Cancelar</string>
    <string name="new_ticket_created">Nuevo ticket creado</string>
    <string name="name_created_by">Creado por:</string>
    <string name="contact_created_by">Contacto:</string>
    <string name="ususarios">Usuarios</string>
    <string name="validacion">Validación</string>
    <string name="mensageValidacion">¿Estas seguro que deseas validar este usuario?</string>
    <string name="validaciones">Validadiones</string>
    <string name="borrado">Borrado</string>
    <string name="mensageBorrado">¿Estas seguro que deseas borrar este usuario?</string>
    <string name="promocion">Promoción</string>
    <string name="mensagepromocion">¿Estas seguro que deseas hacer tecnico a este usuario?</string>
    <string name="tecnico">tecnico</string>
    <string name="modificarContrase">Modificar Contraseña</string>
    <string name="modificarDatos">Modificar Nombre</string>
    <string name="guardarContra">Guardar Contraseña</string>
    <string name="guardarDatos">Guardar Nombre</string>
    <string name="savePhoto">La foto se guardo correctamente</string>
    <string name="selecPhoto">Debe seleccionar una foto antes de guardarla</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_ticket_detail_scrolling">Detalle del Ticket</string>
    <string name="btn_fotos_ticket_detail">Ver fotos</string>
    <string name="error_loading_ticket">Error al carger el ticket</string>
    <string name="delete_ticket_title">Eliminar</string>
    <string name="delete_ticket_message">¿Estas seguro de que quieres eliminar este ticket?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="nombre">Nombre:</string>
    <string name="ticket_deleted">Ticket eliminado</string>
    <string name="error_ticket_deleted">Error al eliminar el ticket</string>
    <string name="inv_edit">Editar..</string>
    <string name="inv_delete">Eliminar..</string>
    <string name="title_activity_inv_detail">InvDetailActivity</string>
    <string name="type">Tipo</string>
    <string name="created">Creado en:</string>
    <string name="updated">Actualizado en:</string>
    <string name="descr">Descripción</string>
    <string name="name">Nombre</string>
    <string name="add">Añadir</string>
    <string name="addInv">Añadir equipo</string>
    <string name="editInv">Editar equipo</string>
    <string name="edit_ticket_dialog_title">Editar ticket</string>
    <string name="edit_ticket_dialog_message">Indique el nuevo titulo y descripción del ticket</string>
    <string name="edit_inv_dialog_title">Editar equipo</string>
    <string name="edit_inv_dialog_message">Indique el nuevo nombre, ubicación y/o  descripción del equipo</string>
    <string name="edit">Editar</string>
    <string name="btn_edit_ticket">Editar ticket</string>
    <string name="share_ticket_content">Con descripción:</string>
    <string name="action_add_thecnical">Asignar tecnico al ticket</string>
    <string name="action_delete_ticket">Eliminar ticket</string>
    <string name="action_share_ticket">Compartir ticket</string>
    <string name="ubi">Ubicación</string>
    <string name="location">Ubicación:</string>
    <string name="content_description_image_view">Imagen cargada por la app</string>
    <string name="action_asigned_tickets">Tickets asignados</string>
    <string name="action_created_tickets">Mis tickets</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_change_state">Cambiar estado del ticket</string>
    <string name="txt_select_stated">Selecciona el nuevo estado del tiket</string>
    <string name="btn_state_pendiente">PENDIENTE DE ASIGNACIÓN</string>
    <string name="btn_asignada">ASIGNADA</string>
    <string name="btn_en_proceso">EN PROCESO</string>
    <string name="btn_solucionada">SLUCIONADA</string>
    <string name="action_all_anotations">Ver anotaciones del ticket</string>
    <string name="action_add_anotation">Añadir anotación</string>
    <string name="edt_cuerpo_new_annotation">Anotación...</string>
    <string name="record">Historial de Tickets</string>
    <string name="delete_picture">Eliminar foto</string>
    <string name="delete_message">¿Deseas eliminar la foto?</string>
    <string name="action_add_ticket">Añadir un nuevo ticket</string>
    <string name="hint_cuerpo_update_annotation">Cuerpo</string>
    <string name="action_add_to_calendar">Añadir ticket al calendario</string>
    <string name="action_add_all_to_calendar">Añadir tickets al calendario</string>
    <string name="calendar_permission_denied">Permiso de calendario DENEGADO</string>
    <string name="correctly_created_user">Usuario creado correctamente</string>
    <string name="ticket_have_cero_annotations">Este ticket no tiene anotaciones</string>
    <string name="error_loading_annotations">Error cargando las anotaciones</string>
    <string name="delete_annotation_title">Eliminar anotación</string>
    <string name="delete_annotation_message">¿Seguro que desea eliminar la anotación?</string>
    <string name="delete_annotation_succed">Anotación eliminada</string>
    <string name="delete_annotation_error">Error eliminando la anotación</string>
    <string name="edit_annotation_title">Editar anotación</string>
    <string name="edit_anntation_message">Indique el nuevo cuerpo de la anotación</string>
    <string name="edit_annotation_corp_needed">Cuerpo necesario</string>
    <string name="edit_annotation_succed">Anotación editada</string>
    <string name="edit_annotation_error">Error editando la anotación</string>
    <string name="new_annotation_title">Crear anotación</string>
    <string name="new_annotation_message">Crea una nueva anotación con los datos que proporciones</string>
    <string name="new_annotation_succed">Anotación creada</string>
    <string name="new_annotation_error">Error al crear la anotación</string>
    <string name="login_token_expired">Vuelve a logearte</string>
    <string name="error_in_the_connection">Error en la conexión</string>
    <string name="no_ticket_assigned">Ticket no asignado</string>
    <string name="register_complete_all_fields">Debe rellenar todos los campos</string>
    <string name="register_paswords_not_match">Las contraseñas no coinciden</string>
    <string name="technician_added">Tecnico añadido al ticket</string>
    <string name="technician_addded_error">Error añadiendo el tecnico al ticket</string>
    <string name="technician_add_select_one">Seleccione el tecnico para asignar al ticket</string>
    <string name="technician_added_no_one_aviable">No hay usuarios tecnicos</string>
    <string name="date_all_tickets_add">Seleccione la fecha dondse se añadiran todos los tickets</string>
    <string name="calendar_all_events_added">Todos los tickets añadidos al calendario</string>
    <string name="edit_state_succed">Estado editado correctamente</string>
    <string name="edit_state_error">Error al editar el estado</string>
    <string name="edit_ticket_succed">Ticket editado</string>
    <string name="edit_ticket_error">Error al editar el ticket</string>
    <string name="calendar_event_added">Ticket añadido al calendario</string>
    <string name="user_tickets_this_are_yours">Estos son tus tickets</string>
    <string name="password_edit_succed">Contraseña editada correctamente</string>
    <string name="state">Estado:</string>
    <string name="acces_denied_by_role">No tienes permiso para hacer esa acción</string>
    <string name="action_add_ticket_to_inv">Añadit ticket a este inventariable</string>
    <string name="btn_end_qr">Volver</string>
    <string name="shared_ticket">Ticket compartido:</string>
    <string name="share">Compartir</string>
    <string name="added_succes">Añadido correctamente</string>
    <string name="edit_equip">Equipo editado</string>
    <string name="edit_equip_error">Error editando el equipo</string>
    <string name="picture_error_loading">Error cargando la imagen</string>
    <string name="delete_succes">Eliminado correctamente</string>
    <string name="menu_qr">Lector de QR</string>
</resources>
