<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_important_devices_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="@string/menu_qr">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_qr"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
