<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.groupfive.satapp.ui.inventariable.allinventariable.InventariableFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inventariable_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.groupfive.satapp.ui.tickets.alltickets.AllTicketFragmentList"
        android:label="@string/menu_gallery"
        tools:layout="@layout/all_fragment_ticket_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.groupfive.satapp.ui.users.allusers.UsersFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.groupfive.satapp.ui.QR.fragmentqr.QrFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_qr" />

</navigation>