<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/editTextTitleNewTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title_new_ticket"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDescriptionNewTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description_new_ticket"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imageViewFotoOneNewTicket"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/content_description_upload_image"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/buttonLoadFotoOneNewTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:text="@string/btn_foto_one_new_ticket" />

</LinearLayout>