<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.inventariable.inventariabledetail.InvDetailActivity"
    tools:showIn="@layout/activity_inv_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.inventariable.inventariabledetail.InvDetailActivity"
        tools:showIn="@layout/activity_inv_detail">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <ImageView
            android:id="@+id/imageViewType"
            android:layout_width="73dp"
            android:layout_height="61dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewTType"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="@+id/textViewTType"
            app:layout_constraintTop_toBottomOf="@+id/textViewTType"
            app:srcCompat="@drawable/image_not_loaded_icon" />

        <TextView
            android:id="@+id/textViewTCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/created"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewTUpdate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTUpdate"
            app:layout_constraintTop_toBottomOf="@+id/textViewTUpdate" />

        <TextView
            android:id="@+id/textViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTCreate"
            app:layout_constraintStart_toEndOf="@+id/textViewTCreate"
            app:layout_constraintTop_toTopOf="@+id/textViewTCreate"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="386dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTDescr"
            app:layout_constraintTop_toBottomOf="@+id/textViewTDescr" />

        <TextView
            android:id="@+id/textViewTDescr"
            android:layout_width="104dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/descr"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewType" />

        <TextView
            android:id="@+id/textViewTUpdate"
            android:layout_width="131dp"
            android:layout_height="24dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            android:text="@string/updated"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewType"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            tools:text="@string/updated" />

        <TextView
            android:id="@+id/textViewUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTUpdate"
            app:layout_constraintStart_toEndOf="@+id/textViewTUpdate"
            app:layout_constraintTop_toTopOf="@+id/textViewTUpdate"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewTLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/location"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewTCreate"
            app:layout_constraintStart_toStartOf="@+id/textViewTCreate"
            app:layout_constraintTop_toBottomOf="@+id/textViewTCreate" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTLocation"
            app:layout_constraintStart_toEndOf="@+id/textViewTLocation"
            app:layout_constraintTop_toTopOf="@+id/textViewTLocation"
            app:layout_constraintVertical_bias="1.0" />

        <fragment
            android:id="@+id/fragment6"
            android:name="com.groupfive.satapp.ui.inventariable.inventariabletickets.ticketsInvFragment"
            android:layout_width="408dp"
            android:layout_height="182dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/record"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fragment6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>